--- a/index.html
+++ b/index.html
@@ -20,19 +20,7 @@
     <br>
     <br>
     <br>
-    <div class="t"><a>Bed</a></div>
-    <br>
-    <br>
-    <div class="t"><a>Fan</a></div>
-    <br>
-    <br>
-    <div class="t"><a>Desktop</a></div>
-    <br>
-    <br>
-    <div class="t"><a>Switch board</a></div>
-    <br>
-    <br>
-    <div class="t"><a>Clock</a></div>
+    <img id="src" src="dog_cat.jpg">
   </center>
 
   <script src="main.js"></script>
